# deploy

docs/: 01_工业产品国内发布无备案宣传方案_20250712.md  01_工业产品国内发布无备案宣传方案_20260618.md  02_微信生态搭建与工业产品获客方案_20260618.md  03_NuGet发布流水线接入标准_20260626.md
scripts/: reserve-nuget-packages.sh  reserve-nuget-packages.sh.bak.20260605_065132
tools/: deploy-fast.sh  deploy-local.sh  local-feed-workflow.md  local-pack.sh  test-nuget-push.sh
tools/ZL.Pipeline.Cli/: install.sh  pyproject.toml  zl-pipeline.py
tools/ZL.Pipeline.Cli/docs/: align-versions.md
tools/ZL.Pipeline.Cli/schemas/: pipeline-schema.json
tools/ZL.Pipeline.Cli/scripts/: api-compare.py  replace-nupkg-dll.py  verify-nuget-obfuscation.sh
tools/ZL.Pipeline.Cli/tests/: conftest.py  test_config.py  test_context.py  test_runner.py  test_state.py
tools/ZL.Pipeline.Cli/zl_pipeline/: __init__.py  __main__.py  config.py  context.py  dotnet.py  main.py  obfuscar.py  report.py  result.py  runner.py  state.py
tools/ZL.Pipeline.Cli/zl_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tools/ZL.Pipeline.Cli/zl_pipeline/scripts/: publish_all.py
tools/ZL.Pipeline.Cli/zl_pipeline/steps/: __init__.py  api_compare.py  build.py  fix_nuspec.py  obfuscate.py  pack.py  publish_deps.py  push.py  replace_nupkg.py
tools/docs/: 01_完整使用手册_20260613.md  02_sync_consumers使用手册_20260607.md  02_采坑记录_Obfuscar混淆流水线_完整验证报告.md  03_版本治理规范_20260614.md  03_采坑记录_本地NuGet推送_replace_nupkg_dll脚本三次迭代.md  04_现状排查及优化思路_20260613.md  04_采坑记录_混淆流水线完整复盘.md  05_工具链参考手册_20260607.md  05_工程化治理方案_集中式发布流水线工具链.md  toolchain-reference.md  (+3 more)
(+9 files in other folders)
